--- a/AdminCourseView.ui
+++ b/AdminCourseView.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>525</width>
-    <height>399</height>
+    <width>578</width>
+    <height>413</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,10 +16,10 @@
   <widget class="QTableWidget" name="AdminCourse_table">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>50</y>
-     <width>471</width>
-     <height>261</height>
+     <x>40</x>
+     <y>40</y>
+     <width>481</width>
+     <height>271</height>
     </rect>
    </property>
    <column>
@@ -56,7 +56,7 @@
   <widget class="QPushButton" name="AddCourse_Button">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>230</x>
      <y>320</y>
      <width>71</width>
      <height>31</height>
@@ -69,7 +69,7 @@
   <widget class="QPushButton" name="EditCourse_Button">
    <property name="geometry">
     <rect>
-     <x>260</x>
+     <x>310</x>
      <y>320</y>
      <width>101</width>
      <height>31</height>
@@ -82,7 +82,7 @@
   <widget class="QPushButton" name="DeleteCourse_Button">
    <property name="geometry">
     <rect>
-     <x>380</x>
+     <x>420</x>
      <y>320</y>
      <width>101</width>
      <height>31</height>
@@ -92,17 +92,30 @@
     <string>Delete Selected Course</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="prerequisite_Button">
+  <widget class="QPushButton" name="ShowPrerequisite_Button">
    <property name="geometry">
     <rect>
-     <x>40</x>
+     <x>140</x>
      <y>320</y>
-     <width>111</width>
+     <width>81</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>Add/Show Prerequisite</string>
+    <string>Show Prerequisites</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="AddPrerequisite_Button">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>320</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Add Prerequisites</string>
    </property>
   </widget>
  </widget>
